# jax-flow-matching

./: .gitignore  pyproject.toml  requirements-cuda.txt  requirements.txt  setup.sh  test.ipynb
flow_matching/: builder.py  train.py
flow_matching/configs/: cifar10.py  mnist.py  toy.py
flow_matching/dataset/: base.py  builder.py  cifar10.py  mnist.py  toy.py
flow_matching/experiments/: cifar10.py  mnist.py  toy.py
flow_matching/field/: gaussian.py  gaussian_flow.py
flow_matching/model/: base.py  builder.py  cnn.py  mlp.py  unet.py
flow_matching/optimizer/: builder.py
